[gd_scene load_steps=6 format=2]

[ext_resource path="res://GFX/Background/bg_layer1.png" type="Texture" id=1]
[ext_resource path="res://Fonts/candles_.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Levels/GameOver.gd" type="Script" id=3]
[ext_resource path="res://GFX/HUD/lifes.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 1028.0
margin_top = 343.0
margin_right = 1312.0
margin_bottom = 736.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 284.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "GAME
OVER"

[node name="MetersScore" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 284.0
margin_bottom = 318.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0 meters
"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 284.0
margin_bottom = 393.0
alignment = 1

[node name="RestartButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 71.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VillageButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 181.0
margin_bottom = 71.0
text = "Go back to village"

[node name="PlayAgainButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 185.0
margin_right = 284.0
margin_bottom = 71.0
text = "Restart Game"
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/VillageButton" to="." method="_on_VillageButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
